--- a/Sally_Sales_Chrome/css/popup.css
+++ b/Sally_Sales_Chrome/css/popup.css
@@ -8,6 +8,23 @@ html, body {
   font: 16px/1.46 Rubik, sans-serif;
   font-weight: 380;
 }
+a.classic-href {
+  transition: background-color 0.2s ease-out;
+  color: #137DE8;
+  size
+  outline: none;
+  cursor: pointer;
+  font-size: 13px;
+}
+
+a.classic-href:hover {
+  transition: background-color 0.2s ease-out;
+  color: #2F21FF;
+  outline: none;
+  cursor: pointer;
+  font-size: 13px;
+}
+
 a, button {
   transition: background-color 0.2s ease-out;
   text-decoration: none;
@@ -38,7 +55,7 @@ h3.blue-headline {
   outline: none;
   font: 16px/1.46 Rubik, sans-serif;
   font-weight: 380;
-  color:#1077ed;
+  color:#137DE8;
 }
 
 
@@ -59,18 +76,29 @@ h3.blue-headline {
 }
 
 .button-next-steps{
-  padding: 5px 16px;
-  border-radius: 4px;
-  background-color:#1a73e87a;
+  padding: 6px 25px;
+  border-radius: 1px;
+  border:0px;
+  background-color:#f3ca30;
   color: white;
   margin-top:5px;
+}
+
+button.button-next-steps:hover {
+  background-color: #e8ba0d;
+}
+
+
+p.meta-description-colleague {
+  color: #888;
 }
 
 #content-block-colleague{
   margin-top:25px;
 }
 
-#content-block-colleague h5{
+div#content-block-colleague h5{
+  font-size: 14px;
   margin:0;
 }
 
@@ -79,8 +107,14 @@ h3.blue-headline {
   width: 200px;
 }
 
-.meta-description-colleague{
-  font-size: 13px;
+
+ul.list-icon {
+  list-style-image: url(img/emoji.png);
+}
+
+ul.list-icon li{
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 hr {
@@ -135,7 +169,7 @@ hr {
   border-radius: 4px 0px 0px 4px;
   background-color: #fff;
   position: absolute;
-  top: 20px;
+  top: 102px;
   left: -20px;
   cursor: pointer;
   text-align: center;
@@ -192,12 +226,16 @@ hr {
 }
 .panel-main__menu-tab:hover,
 .panel-main__menu-tab_active {
-  border-bottom: 3px solid #1077ed;
-  color: #1077ed;
+  border-bottom: 3px solid #da3838;
+
   display:block;
+
+  background: linear-gradient(to right, #FD52B9 0%, #da3838 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
 .panel-main__menu-tab_inactive {
-  pointer-events: none;
+  pointer-events: pointer;
 }
 
 .panel-main__block {
