--- a/Sally_Sales_Chrome/css/popup.css
+++ b/Sally_Sales_Chrome/css/popup.css
@@ -201,13 +201,14 @@ div.case-number-wrapper h4 {
 
 div.load-animation-wrapper img{
   width: 100%;
-  opacity: 0.7;
+  opacity: 1;
 }
 
-div.load-animation-wrapper h4{
+h4.white-font{
   color: white;
   font-weight: 200;
   font-style: italic;
+  text-align: center;
 
 }
 
