--- a/Sally_Sales_Chrome/css/popup.css
+++ b/Sally_Sales_Chrome/css/popup.css
@@ -233,6 +233,11 @@ h4.white-font{
   height: 20px;
 }
 
+div.icon-headline-block img{
+  border-radius: 100%;
+  height: 23px;
+}
+
 .icon-headline-block, .icon-headline-block-2 {
   display: flex;
 }
@@ -240,6 +245,10 @@ h4.white-font{
 .icon-headline-block h6, .icon-headline-block-2 h6 {
   margin:0px;
   padding-left: 15px;
+}
+
+.info-circle{
+  color: grey;
 }
 
 /*decirption of headline below*/
