--- a/Sally_Sales_Chrome/css/popup.css
+++ b/Sally_Sales_Chrome/css/popup.css
@@ -266,6 +266,11 @@ h4.white-font{
   height: 20px;
 }
 
+.icon-download{
+  height: 15px;
+
+}
+
 div.icon-headline-block img{
   border-radius: 100%;
   height: 23px;
