--- a/Sally_Sales_Chrome/css/popup.css
+++ b/Sally_Sales_Chrome/css/popup.css
@@ -237,28 +237,33 @@ h4.white-font{
 }
 
 .sally-assistant-wrapper {
-  display:flex;
+  overflow: hidden;
   margin:0;
   margin-top: 15px;
+  margin-bottom: 15px;
+  width: 100%;
 }
 
 .speech-bubble {
-  padding-left: 10px;
-  padding-right: 10px;
-  margin-right: 10px;
-  margin-bottom: 10px;
+  margin-left: 50px;
   background-color: white;
   border-radius: 10px;
 }
 
 .speech-bubble p {
+  padding: 10px;
   color: black;
   font-size: 17;
-  margin: 5;
+  margin:0;
 }
 
 .sally-image img{
   height: 50px;
+}
+
+.sally-image{
+  width: 50px;
+  float: left;
 }
 
 /*Put Icon besides headline */
@@ -457,13 +462,15 @@ form.task-form td {
 
 
 .content-block_invisible {
-  /*display:none;*/
+  display:none;
+  /*
   overflow: hidden;
   max-height: 0;
   padding: 0;
   border: 0;
   margin:0;
   transition: max-height 0.2s ease-out;
+  */
 }
 
 
